--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,27 @@
         <version>0.16.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <properties>
-        <auto-value.version>1.7</auto-value.version>
-        <auto-service.version>1.0</auto-service.version>
-        <flink-verision>1.13.0</flink-verision>
-    </properties>
     <packaging>jar</packaging>
+    <build>
+    <plugins>
+    <plugin>
+        <groupId>org.xolstice.maven.plugins</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <version>0.6.1</version>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>compile</goal>
+                    <goal>test-compile</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
+    </plugins>
+    </build>
 
     <artifactId>java-pubsublite-flink</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.0</version>
     <dependencies>
         <dependency>
             <groupId>com.google.auto.value</groupId>
@@ -34,12 +46,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
-            <version>${flink-verision}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <version>1.13.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.truth</groupId>
