--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-pubsublite</artifactId>
             <version>0.16.1</version>
         </dependency>
