--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,11 @@
             <version>1.13.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-test-utils-junit</artifactId>
+            <version>1.13.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
