--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-test-utils</artifactId>
-            <version>1.13-SNAPSHOT</version>
+            <version>1.13.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
