--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -29,7 +29,15 @@ branchProtectionRules:
   requiresStrictStatusChecks: false
   # List of required status check contexts that must pass for commits to be accepted to matching branches.
   requiredStatusCheckContexts:
-  - "cla/google"
+    - "dependencies (8)"
+    - "dependencies (11)"
+    - "linkage-monitor"
+    - "lint"
+    - "clirr"
+    - "units (8)"
+    - "units (11)"
+    - "Kokoro - Test: Integration"
+    - "cla/google"
 # List of explicit permissions to add (additive only)
 permissionRules:
 - team: yoshi-admins
@@ -38,3 +46,5 @@ permissionRules:
   permission: admin
 - team: yoshi-java
   permission: push
+- team: api-pubsublite
+  permission: admin
