--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>java-pubsublite-flink</artifactId>
-    <version>0.0.0</version>
+    <artifactId>google-cloud-pubsublite-flink</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
     <build>
         <extensions>
             <extension>
