--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <packaging>jar</packaging>
     <artifactId>google-cloud-pubsublite-flink</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+    <properties>
+        <flink.version>1.13.0</flink.version>
+        <pubsublite.version>0.16.1</pubsublite.version>
+    </properties>
     <build>
         <extensions>
             <extension>
@@ -54,12 +58,12 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-pubsublite</artifactId>
-            <version>0.16.1</version>
+            <version>${pubsublite.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.api.grpc</groupId>
             <artifactId>proto-google-cloud-pubsublite-v1</artifactId>
-            <version>0.16.1</version>
+            <version>${pubsublite.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.api</groupId>
@@ -89,27 +93,27 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-base</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-metrics-core</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-runtime_2.11</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -129,13 +133,13 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-test-utils</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-test-utils-junit</artifactId>
-            <version>1.13.0</version>
+            <version>${flink.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
