--- a/pom.xml
+++ b/pom.xml
@@ -181,5 +181,10 @@
             <version>${flink.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.flogger</groupId>
+            <artifactId>flogger-slf4j-backend</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 </project>
