--- a/samples/install-without-bom/pom.xml
+++ b/samples/install-without-bom/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
-  <artifactId>pubsublite-flink-snapshot</artifactId>
+  <artifactId>pubsublite-flink-install-without-bom</artifactId>
   <packaging>jar</packaging>
-  <name>Google Pub/Sub Lite Flink Connector Snapshot Samples</name>
+  <name>Google Pub/Sub Lite Flink Connector Install Without Bom</name>
   <url>https://github.com/googleapis/java-pubsublite-flink</url>
 
   <!--
@@ -23,14 +23,15 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <!-- {x-version-update-start::current} -->
+
   <dependencies>
+    <!-- [START pubsublite-flink_install_without_bom] -->
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pubsublite-flink</artifactId>
       <version>0.1.0-SNAPSHOT</version>
     </dependency>
-  <!-- {x-version-update-end} -->
+    <!-- [END pubsublite-flink_install_without_bom] -->
 
     <dependency>
       <groupId>junit</groupId>
@@ -42,12 +43,6 @@
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
       <version>1.1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.flink</groupId>
-      <artifactId>flink-test-utils_2.11</artifactId>
-      <version>1.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
