--- a/samples/snapshot/pom.xml
+++ b/samples/snapshot/pom.xml
@@ -82,6 +82,20 @@
               </sources>
             </configuration>
           </execution>
+          <execution>
+            <id>add-snippets-resources</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>add-resource</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <directory>../snippets/src/main/resources</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
