--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.1.0-SNAPSHOT</version>
     <properties>
         <flink.version>1.13.2</flink.version>
-        <pubsublite.version>1.2.0</pubsublite.version>
+        <pubsublite.version>${project.parent.version}</pubsublite.version>
     </properties>
     <build>
         <extensions>
