--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
-  <artifactId>google-cloud-pubsublite-flink</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <artifactId>pubsublite-flink</artifactId>
+  <version>0.2.0-SNAPSHOT</version><!-- {x-version-update:pubsublite-flink:current} -->
   <properties>
     <flink.version>1.15.0</flink.version>
     <pubsublite.version>${project.parent.version}</pubsublite.version>
