--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
+  <name>Pub/Sub Lite Flink Connector</name>
   <artifactId>pubsublite-flink</artifactId>
   <version>0.1.2-SNAPSHOT</version><!-- {x-version-update:pubsublite-flink:current} -->
   <properties>
