--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -43,7 +43,7 @@ permissionRules:
   permission: admin
 - team: yoshi-java-admins
   permission: admin
-- team: yoshi-java
+- team: cloud-sdk-java-team
   permission: push
-- team: api-pubsublite
+- team: managed-kafka-team
   permission: admin
